Fix huge services spacing

--- a/src/scss/services.scss
+++ b/src/scss/services.scss
@@ -5,6 +5,7 @@
     display: inline-block;
     vertical-align: text-top;
     padding: 10px;
+    margin-top: -60px;
 }
 
 .service a {
